Attempting to fix caret alignment

--- a/assets/styles/homepage.css
+++ b/assets/styles/homepage.css
@@ -76,6 +76,7 @@ p {
 	margin-left: 5px;
 	font-size: 12px;
 	display: inline-block;
+	vertical-align: middle;
 }
 
 .has-dropdown .dropdown {
